--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
-    <script src="js/scripts.js"></script>
+    
     <title>Random Quote Generator</title>
 </head>
 <body>
@@ -15,11 +15,12 @@
         <div class="container">
             <p id="quotation"></p>
             <p id="author"></p>
-            <button id="generate" onclick="generateQuote()">Generate New Quote</button>
+            <button id="generate">Generate New Quote</button>
        </div>
     </main>
     <footer>
-
+        <p>&copy;2024 Cooper Bowman Productions</p>
     </footer>
 </body>
 </html>
+<script src="js/scripts.js"></script>
